--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
 
                     <form action="" method="get" class="m-4 d-flex flex-wrap flex-column">
                        
-                         <input type="date" class="form-control rounded-0" aria-label="Sizing example input"
-                               aria-describedby="inputGroup-sizing-default">
+                         <input type="date" class="mb-5">
                        
                         <button type="submit" class="btn btn-primary">Buscar</button>
                     </form>
