--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
 
                     <form action="" method="get" class="m-4 d-flex flex-wrap flex-column">
                        
-                         <input type="date" class="mb-5">
+                          <div class="input-group flex-nowrap mb-3 rounded-0">
+                            <span class="input-group-text rounded-0" >Data: </span>
+                            <input type="date" class="form-control rounded-0">
+                        </div>
                        
                         <button type="submit" class="btn btn-primary">Buscar</button>
                     </form>
