--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 
                 </div>
 
+                <!--Tabela agendamentos-->                                   
                 <table class="table">
 
                     <tr>
@@ -286,6 +287,7 @@
                     <h5 class="m-2">Dados da semana</h5>
                     <hr>
 
+                     <!--Tabela Dados da semana-->               
                     <table class="table table-borderless">
                         <tr>
 
@@ -353,6 +355,7 @@
 
                 </div>
 
+                 <!--Div buscar por data-->                                    
                 <div class="divMenor flex-grow-1">
 
                     <h5 class="m-2">Buscar por data</h5>
